# foray

./: .gitignore  Cargo.toml  README.md  todo.md
.cargo/: config.toml
book/: book.toml
book/src/: SUMMARY.md  creating_nodes.md  environments.md  installation.md  interface.md  introduction.md  using_foray.md
data_model/: Cargo.toml
data_model/src/: node.rs  node_spec.rs
foray_data_model/: Cargo.toml
foray_data_model/src/: lib.rs  node.rs  node_spec.rs
foray_data_vis/: Cargo.toml
foray_data_vis/src/: image_vis.rs  layout.rs  lib.rs  main.rs  series_vis.rs  series_vis_view.rs  svg_vis.rs
foray_graph/: Cargo.toml
foray_graph/src/: executor.rs  graph.rs  lib.rs  network.rs  node_instance.rs  project.rs  rust_node.rs
foray_nodes/networks/: fft
foray_nodes/test_dependency/: pyproject.toml
foray_nodes/test_dependency/src/test_dependency/foray/: __init__.py  const.py  dep1.py  multiply.py
foray_nodes/test_nodes/: pyproject.toml  pyrightconfig.json
foray_nodes/test_nodes/networks/: fft_lowpass  fft_lowpass.network  new_net.network  noise.network  simple.network  sleep.network  vis
foray_nodes/test_nodes/src/test_nodes/: __init__.py
foray_nodes/test_nodes/src/test_nodes/foray/: add.py  checker_board.py  circle_mask.py  constant.py  fft.py  print_stats.py  shepp_logan.py  shift.py
foray_nodes/test_nodes/src/test_nodes/foray/examples/: 3d_test.py  coulomb.py  example_phase.py  gaussian.py  perlin_noise.py  sin.py  sleep.py  ui_widget_gallery.py
foray_py/: Cargo.toml
foray_py/python/: pyproject.toml
foray_py/python/src/foray/: __init__.py
foray_py/src/: discover.rs  err.rs  lib.rs  main.rs  py_module.rs  py_node.rs
foray_py/tests/: node_compute.rs  node_config.rs
foray_ui/: Cargo.toml  LICENSE  README.md  foray_values.md  todo.md
foray_ui/data/colormap/: csv_to_img.py
foray_ui/deploy_scripts/: entitlements.plist  publish.sh  sign.sh
foray_ui/foray_python_lib/: Cargo.toml  README.md  pyproject.toml
foray_ui/foray_python_lib/python/foray/: __init__.py
foray_ui/foray_python_lib/src/: lib.rs
foray_ui/networks/: OneDimensionNodes.ron  Untitled.ron  basic_python.ron  bloch_sim  empty_network.ron  my_network.ron  my_new_network.ron  network.ron  network.sync-conflict-20250121-174641-2VOCRAJ.ron  network_bak.ron  network_bak2.ron  port_types  port_types.ron  shepp.ron  test_venv.ron
foray_ui/nodes/: network.ron  pyproject.toml
foray_ui/nodes/core/: FFT.py  Inverse_FFT.py  Phantom.py  circle_mask.py  linspace.py  sin_image.py
foray_ui/nodes/core/bloch/: Bloch.py  Cross.py  Gradient.py  Spins.py  rf.py
foray_ui/nodes/core/data/: b0.npy
foray_ui/nodes/core/math/: x.py
foray_ui/nodes/core/test/: add_array.py  dyn_in.py  dyn_out.py  gen_image.py  large_compute.py  null.py  obj.py  obj_split.py  primitive.py  sleep.py  test_pybind11.py
foray_ui/nodes/core/test/pybind11/python_example.egg-info/: PKG-INFO  SOURCES.txt
foray_ui/nodes/core/test/pybind11/src/: main.cpp
foray_ui/nodes/foray_nodes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
foray_ui/nodes/gpi_nodes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
foray_ui/nodes/testing/: color_split.py  float_array.py  nested_array.py  shaped_array.py  transpose_array.py
foray_ui/src/: app.rs  config.rs  file_watch.rs  graph.rs  gui_node.rs  headless.rs  lib.rs  main.rs  network.rs  nodes.rs  project.rs  python_env.rs  user_data.rs  workspace.rs
foray_ui/src/interface/: add_node.rs  image.rs  mod.rs  node.rs  node_config.rs  numeric_input.rs  port.rs  side_bar.rs  status.rs  theme_config.rs  wire.rs
foray_ui/src/interface/node_canvas/: camera.rs  mod.rs  node_canvas.rs
foray_ui/src/math/: mod.rs  round_nice.rs  vector.rs
foray_ui/src/node_instance/: histogram.rs  mod.rs  value_mapping.rs  visualization_parameters.rs  visualiztion.rs
foray_ui/src/nodes/: constant.rs  linspace.rs  math_nodes.rs  plot.rs  plot_complex.rs  port.rs  status.rs  vector_field.rs
foray_ui/src/python/: mod.rs  py_node.rs  py_widget.rs
foray_ui/src/rust_nodes/: mod.rs  port.rs
foray_ui/src/style/: button.rs  color.rs  container.rs  icon.rs  mod.rs  theme.rs
foray_ui/src/widget/: custom_button.rs  mod.rs  node_container.rs  pin.rs  shapes.rs  workspace.rs  workspace_canvas.rs
foray_widgets/: Cargo.toml
foray_widgets/src/: lib.rs  main.rs  numeric_input.rs  numeric_input_modified.rs  text_input.rs
node_canvas/: Cargo.toml  README.md
node_canvas/examples/: node_canvas.rs
node_canvas/src/: camera.rs  lib.rs  node_canvas.rs  shape_context.rs
notes/color_spaces/: color_spaces.md
py_foray/: Cargo.toml
py_foray/src/: main.rs  py_module.rs  py_node.rs
py_foray/tests/: node_compute.rs  node_config.rs
