[package]
name = "foray_data_model"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["data_model", "foray_graph", "py_foray"]
default-members = ["data_model", "foray_graph", "py_foray"]


[workspace.dependencies]


ndarray = { version = "0.16.1", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.27"

relative-path = { version = "2.0.1", features = ["serde"] }

derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"

pyo3 = "0.25.0"
numpy = "0.25.0"
