cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = ["foray_data_model", "foray_graph", "foray_py", "foray_ui", "node_canvas"]
default-members = ["foray_ui"]


[workspace.dependencies]


ndarray = { version = "0.16.1", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.27"
env_logger = "0.11.8"

relative-path = { version = "2.0.1", features = ["serde"] }

derive_more = { version = "2.0.1", features = [
	"debug",
	"display",
	"error",
	"add",
	"mul",
	"not",

] }
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"

pyo3 = "0.25.0"
numpy = "0.25.0"


iced = { git="https://github.com/iced-rs/iced",version="0.14.0-dev", default-features = false, features = [
	"wgpu",
	# "auto-detect-theme",
	"smol",
	# "tokio",
	# "crisp",
	"debug",
	"lazy",
	"image-without-codecs",
	"advanced",
	"canvas",
	"markdown",
	"svg",
] }

[profile.dev]
debug = 0
codegen-backend = "cranelift"
