[package]
name = "data_model"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["debug", "display", "error"] }
ndarray = { version = "0.16.1", features = ["serde"] }
relative-path = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
pyo3 = "0.25.0"
numpy = "0.25.0"
