[package]
name = "foray_ui"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Foray"
identifier = "org.mrtud.foray"
icon = ["foray_ui/data/resources/icon*.png"]
version = "0.1.0"
category = "Development"
short_description = "An interactive signal processing toolkit"

[[bin]]
name = "foray"
path = "src/main.rs"


[dependencies]
foray_data_model = { path = "../foray_data_model/" }
foray_graph = { path = "../foray_graph/" }
foray_py = { path = "../foray_py/" }

iced = { version = "0.13.1", default-features = false, features = [
	"wgpu",
	"auto-detect-theme",
	"debug",
	"lazy",
	"image-without-codecs",
	"advanced",
	"canvas",
	"async-std",
	"markdown",
	"svg",
] }

pyo3.workspace = true
numpy.workspace = true
ndarray = "0.16.1"

ron.workspace = true
indexmap = { version = "2.7.0", features = ["serde"] }

serde.workspace = true
strum.workspace = true
derive_more.workspace = true

float-cmp = "0.10.0"
notify = { version = "8.0.0", features = ["serde"] }
notify-debouncer-full = "0.5.0"

env_logger = "0.11.6"
log.workspace = true                                         # = "0.4.22"
palette = "0.7.6"
glob = "0.3.2"
itertools.workspace = true                                   # = "0.14.0"
glam = "0.29.2"
colorgrad = "0.7.0"
directories = "6.0.0"
toml = "0.8.20"
rfd = "0.15.3"
relative-path.workspace = true
iced_aw = { version = "0.12.2", features = ["typed_input"] }
clap = { version = "4.5.45", features = ["derive"] }
open = "5.3.2"
plotters = "0.3.7"
